<resources>
    <string name="app_name">Chess Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset Score</string>
    <string name="player_a">Player A</string>
    <string name="player_b">Player B</string>
    <string name="add_score">Checkmate</string>
    <string name="act">Attact</string>
    <!--string name="resignation">Resignation</string-->
    <string name="draw">Set Draw Game</string>



</resources>
