<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/chess_board_2" />


    <LinearLayout
        android:id="@+id/player_ground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/player_a"
                android:textAppearance="@style/StyleFontTextView"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/player_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textAppearance="@style/StyleFontTextView"
                android:textSize="36sp"
                android:paddingBottom="24dp"
                android:textStyle="bold"

                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScoreForPlayerA"
                android:text="@string/add_score"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/StyleFontButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="attactA"
                android:text="@string/act"
                android:textAppearance="@style/StyleFontButton" />

            <TextView
                android:id="@+id/player_a_atactN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="Attacts done : 0"
                android:textAppearance="@style/StyleFontTextView"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/player_b"
                android:textAppearance="@style/StyleFontTextView"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/player_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textAppearance="@style/StyleFontTextView"
                android:textSize="36sp"
                android:textStyle="bold"
                android:paddingBottom="24dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="addScoreForPlayerB"
                android:text="@string/add_score"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/StyleFontButton" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="attactB"
                android:text="@string/act"
                android:textAppearance="@style/StyleFontButton" />

            <TextView
                android:id="@+id/player_b_attactN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="24dp"
                android:text="Attacts done : 0"
                android:textAppearance="@style/StyleFontTextView"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/draw_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_ground"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:onClick="markDrawGame"
        android:text="@string/draw"
        android:textAppearance="@style/StyleFontButton" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/draw_button"
        android:layout_centerHorizontal="true"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textAppearance="@style/StyleFontButton" />

</RelativeLayout>
